# Embedded_NIC

multi_process/: test_model
multi_process/AlexNet/: main.py  make_warm.py  reduce_process.py
multi_process/AlexNet/prac/: 4layers_warm_all.py  acc_warm_all.py  allpi_warm_all.py  best_warm_all.py  derived_model.py  just_visvm.py  only_pisvm.py  try_no_busy_wait.py  try_no_busy_wait2.py  try_shared.py  visvm_time_check.py  warm_all.py
multi_process/Carlini/: 4layers_warm_all.py  acc_warm_all.py  allpi_warm_all.py  backup.py  best_warm_all.py  con_process_no_sig.py  con_process_sig.py  derived_model.py  make_warm.py  target_model.py  test.py  warm_all.py
multi_process/MobileNet/: 4layers_warm_all.py  acc_warm_all.py  allpi_warm_all.py  best_warm_all.py  derived_model.py  main.py  make_warm.py  reduce_process.py  warm_all.py
multi_thread/Alexnet/thundersvm/: CMakeLists.txt
multi_thread/Alexnet/thundersvm/include/thundersvm/: dataset.h  test.h
multi_thread/Alexnet/thundersvm/include/thundersvm/model/: oneclass_svc.h  svmmodel.h
multi_thread/Alexnet/thundersvm/src/svm_input_scale/: a1a
multi_thread/Alexnet/thundersvm/src/thundersvm/: alexnet.cpp  carlini.cpp  thpool.cpp  thundersvm-predict.cpp
multi_thread/Mobilenet/thundersvm/include/thundersvm/: alexnet.h  carlini.h  mobile.h  net.h  squeeze.h  test.h
multi_thread/Mobilenet/thundersvm/src/thundersvm/: CMakeLists.txt  mobile.cpp  thundersvm-predict.cpp
multi_thread/Mobilenet/thundersvm/src/thundersvm/kernel/: kernel_with_cpu.cpp
multi_thread/Only_Best_Layer/Alexnet/thundersvm/include/thundersvm/: alexnet.h  svm.h  test.h
multi_thread/Only_Best_Layer/Alexnet/thundersvm/src/thundersvm/: alexnet.cpp  thundersvm-predict.cpp
multi_thread/Only_Best_Layer/Carlini/thundersvm/include/thundersvm/: carlini.h  densenet.h  test.h
multi_thread/Only_Best_Layer/Carlini/thundersvm/src/hidden_layer_output/: 0_layer.pt  2_layer.pt  4_layer.pt  6_layer.pt
multi_thread/Only_Best_Layer/Carlini/thundersvm/src/svm_input_scale/: hidden_out_3.txt  hidden_out_4.txt
multi_thread/Only_Best_Layer/Carlini/thundersvm/src/thundersvm/: carlini.cpp  dataset.cpp  svm.cpp  thundersvm-predict.cpp
multi_thread/Only_Best_Layer/Mobilenet/thundersvm/include/thundersvm/: resnet.h  test.h
multi_thread/Only_Best_Layer/Mobilenet/thundersvm/src/thundersvm/: alexnet.cpp  densenet.cpp  mobile.cpp  thundersvm-predict.cpp  thundersvm-train.cpp
multi_thread/Only_Best_Layer/SqueezeNet/thundersvm/include/thundersvm/: squeeze.h  (+1 more)
multi_thread/SqueezeNet/thundersvm/include/thundersvm/: densenet.h  inception.h  mnasnet.h  mobile.h  net.h  test.h  thpool.h
multi_thread/SqueezeNet/thundersvm/src/svm_input_scale/: hidden_out_0.txt  hidden_out_1.txt  hidden_out_6.txt
multi_thread/SqueezeNet/thundersvm/src/thundersvm/: mobile.cpp  squeeze.cpp  thundersvm-predict.cpp
multi_thread/thundersvm/: mnist_carlini_traced_model_36.pt
multi_thread/thundersvm/include/thundersvm/: inception.h  net.h  shuffle.h  test.h
multi_thread/thundersvm/include/thundersvm/kernel/: kernel_with_cpu.h  kernelmatrix_kernel.h
multi_thread/thundersvm/src/hidden_layer_output/: 1_layer.pt  3_layer.pt  5_layer.pt  7_layer.pt  8_layer.pt
multi_thread/thundersvm/src/svm_input_scale/: hidden_out_2.txt  hidden_out_8.txt
multi_thread/thundersvm/src/thundersvm/: CMakeLists.txt  carlini.cpp  thundersvm-predict.cpp
(+7 files in other folders)
